# Blare

./: .gitignore  CMakeLists.txt  README.md
BLARE_CODE/: blare_boost.cpp  blare_icu.cpp  blare_multi.cpp  blare_multi_add_arm.cpp  blare_multi_boost.cpp  blare_multi_countAll.cpp  blare_multi_icu2.cpp  blare_multi_longest.cpp  blare_multi_pcre22.cpp  blare_pcre2.cpp  blare_re2.cpp  blare_re2_4arms.cpp  blare_re2_countAll.cpp  blare_re2_longest.cpp
cmake/: FindRe2.cmake  re2Config.cmake
data/: US_Accidents_Dec21_updated.csv
experiments/: CMakeLists.txt  boost_expr.cpp  corr_expr.cpp  icu_expr.cpp  pcre2_expr.cpp  re2_expr.cpp  utils.cpp
experiments/include/: utils.hpp
externel/: CMakeLists.txt
include/: blare.hpp
include/blare_boost/: blare.hpp  direct_match.hpp  split_match_3way.hpp  split_match_multiway.hpp
include/blare_icu/: blare.hpp  direct_match.hpp  split_match_3way.hpp  split_match_multiway.hpp
include/blare_icu/unicode_misc/: regex_split.hpp  split_regex.hpp
include/blare_pcre2/: blare.hpp  direct_match.hpp  split_match_3way.hpp  split_match_multiway.hpp
include/blare_re2/: blare.hpp  direct_match.hpp  split_match_3way.hpp  split_match_multiway.hpp
include/misc/: misc.hpp  regex_split.hpp  split_regex.hpp
include/re2/: re2_3way.hpp  re2_blare.hpp  re2_multi.hpp
original_codebase/: CMakeLists,txt  CMakeLists.txt  README.md
original_codebase/BLARE_CODE/: CMakeLists.txt  blare_boost.cpp  blare_icu.cpp  blare_pcre2.cpp  blare_re2.cpp  blare_re2_4arms.cpp  blare_re2_countAll.cpp  blare_re2_longest.cpp  plot_traffic.ipynb
original_codebase/BLARE_DATA/: dataset.txt  regexes_traffic.txt
src/: CMakeLists.txt  main.cpp  regex_split.cpp
src/blare_boost/: CMakeLists.txt  blare.cpp  split_match_3way.cpp  split_match_multiway.cpp
src/blare_icu/: CMakeLists.txt  blare.cpp  split_match_3way.cpp  split_match_multiway.cpp
src/blare_icu/unicode_misc/: CMakeLists.txt  regex_split.cpp  split_regex.cpp
src/blare_pcre2/: CMakeLists.txt  blare.cpp  split_match_3way.cpp  split_match_multiway.cpp
src/blare_re2/: CMakeLists.txt  blare.cpp  split_match_3way.cpp  split_match_multiway.cpp
src/misc/: CMakeLists.txt  regex_split.cpp  split_regex.cpp
src/re2/: re2_blare.cpp  re2_multi.cpp
